# grafbase-external-composition

./: Cargo.toml  Dockerfile  LICENSE  README.md
patches/: graphql-composition+0.12.1.patch
src/: main.rs
